<resources>

    <string name="app_name">喵吧直播</string>

    <string name="app_null"> </string>
    <string name="app_no">无</string>
    <string name="app_notset">未设置</string>

    <string name="app_protocol">登陆即代表你同意</string>
    <string name="app_protocol_name"><u>喵吧服务和隐私条款</u></string>

    <string name="zero">0</string>
    <string name="not_set">未设置</string>
    <string name="not_verified">未验证</string>
    <string name="verified">已验证</string>
    <string name="edit">编辑</string>
    <string name="select">全选</string>
    <string name="screen">筛选</string>
    <string name="delete">删除</string>
    <string name="share">分享</string>
    <string name="save">保存</string>
    <string name="collection">收藏</string>
    <string name="clean">清空</string>
    <string name="confirm">确认</string>
    <string name="manage">管理</string>
    <string name="cancel">取消</string>
    <string name="more">更多</string>
    <string name="more_mark">···</string>
    <string name="next">下一步</string>
    <string name="complete">完成</string>
    <string name="error_field_required">此项不能为空</string>
    <string name="error_field_format">此项格式错误</string>

    <string name="exit_hint">再点一次即可退出程序.</string>
    <string name="client_order_address_erro">地址无法解析,换一个吧</string>

    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="login_way">选择登陆方式</string>
    <string name="login_captcha">验证码登录</string>
    <string name="login_password">密码登录</string>
    <string name="login_tourist">游客登录</string>
    <string name="login_out">退出当前帐号</string>
    <string name="account">用&#160;&#160;户&#160;&#160;名</string>
    <string name="account_hint">请输入您的用户名</string>
    <string name="phone">手&#160;&#160;机&#160;&#160;号</string>
    <string name="phone_bind">绑定手机号</string>
    <string name="phone_register">手机号快速注册</string>
    <string name="phone_hint">请输入您的手机号</string>
    <string name="phone_hasuse">该手机号已注册哦.</string>
    <string name="phone_nouse">该手机号尚未注册哦.</string>
    <string name="captcha">验&#160;&#160;证&#160;&#160;码</string>
    <string name="captcha_mobile">手机验证</string>
    <string name="captcha_hint">请输入验证码</string>
    <string name="captcha_get">验证</string>
    <string name="captcha_sending">正在发送中</string>
    <string name="captcha_repeat">%1$s秒后重发</string>
    <string name="password">登录密码</string>
    <string name="password_hint">请输入6~18位密码</string>
    <string name="password_new">新&#160;&#160;密&#160;&#160;码</string>
    <string name="password_new_hint">请输入6~18位新密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="password_confirm_hint">请再次输入密码</string>
    <string name="password_confirm_error">您两次输入的密码不相同.</string>
    <string name="register_protocol">注册即同意%1$s</string>//9号仓库服务条款
    <string name="password_remember">记住密码</string>
    <string name="password_forget">重置密码</string>
    <string name="password_set">设置密码</string>
    <string name="password_forget_find">忘记密码?&#160;&#160;找回密码</string>
    <string name="password_forget_success">重置密码成功,去登录吧.</string>
    <string name="password_update">修改密码</string>
    <string name="password_update_hint">点击修改密码</string>
    <string name="password_update_success">修改密码成功,您需要重新登录.</string>

    <string name="weixin">微&#160;&#160;信&#160;&#160;号</string>
    <string name="weixin_register">微信号注册</string>
    <string name="weixin_login">微信号登录</string>
    <string name="weixin_error">微信号登录失败,换个方式登录吧.</string>
    <string name="weixin_bind">绑定微信号失败.</string>
    <string name="weixin_noinstall">检测到您还未安装微信,换个方式登录吧.</string>

    <string name="email">邮箱地址</string>
    <string name="email_hint">请输入合法的邮箱地址</string>
    <string name="email_bind">绑定邮箱地址</string>

    <string name="bankcard">银&#160;&#160;行&#160;&#160;卡</string>
    <string name="bankcard_see">查看已绑定银行卡</string>

    <string name="payment_password">支付密码</string>
    <string name="payment_password_hint">请输入6位支付密码</string>
    <string name="payment_password_confirm_hint">请再次输入支付密码</string>
    <string name="payment_password_set">设置支付密码</string>
    <string name="payment_password_update">修改支付密码</string>

</resources>