<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/common_rect_horizontal"
    android:orientation="vertical">

    <LinearLayout
        style="@style/common_rect_horizontal"
        android:layout_marginTop="@dimen/dp_16"
        android:orientation="horizontal">

        <TextView
            style="@style/common_textview_black"
            android:layout_marginRight="@dimen/dp_20"
            android:text="@string/account"
            android:visibility="gone" />

        <xyz.tanwb.airship.view.widget.DrawableEditText
            android:id="@+id/account"
            style="@style/common_edit_phone"
            android:hint="@string/account_hint"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        style="@style/common_rect_horizontal"
        android:layout_marginTop="@dimen/dp_16"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/common_textview_black"
            android:layout_marginRight="@dimen/dp_20"
            android:text="@string/password"
            android:visibility="gone" />

        <LinearLayout
            style="@style/common_rect_horizontal"
            android:background="@drawable/common_edit_line_gray_background"
            android:gravity="center_vertical">

            <xyz.tanwb.airship.view.widget.DrawableEditText
                android:id="@+id/password"
                style="@style/common_edit_password"
                android:hint="@string/password_hint" />

            <ImageView
                android:id="@+id/password_eye"
                style="@style/common_imageview"
                android:layout_marginRight="@dimen/dp_4"
                android:src="@drawable/icon_eye_hide" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/password_forget_find"
        style="@style/common_textview_gray"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/password_forget_find"
        android:visibility="gone" />

    <TextView
        android:id="@+id/login"
        style="@style/common_button_theme_pie"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/login" />
</LinearLayout>