<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_mobile_layout"
    style="@style/common_rect_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        style="@style/common_rect_horizontal"
        android:layout_marginTop="@dimen/common_dp_16"
        android:orientation="horizontal">

        <TextView
            style="@style/common_textview_black"
            android:layout_marginRight="@dimen/common_dp_20"
            android:text="@string/phone"
            android:visibility="gone" />

        <xyz.tanwb.treasurechest.view.widget.DrawableEditText
            android:id="@+id/phone"
            style="@style/common_edit_phone"
            android:hint="@string/phone_hint" />

        <TextView
            android:id="@+id/captcha_get"
            style="@style/common_button_theme_pie"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/common_dp_8"
            android:clickable="false"
            android:text="验证" />
    </LinearLayout>

    <LinearLayout
        style="@style/common_rect_horizontal"
        android:layout_marginTop="@dimen/common_dp_16"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/common_textview_black"
            android:layout_marginRight="@dimen/common_dp_20"
            android:text="@string/captcha"
            android:visibility="gone" />

        <xyz.tanwb.treasurechest.view.widget.DrawableEditText
            style="@style/common_edit_captcha"
            android:hint="@string/captcha_hint" />
    </LinearLayout>

    <TextView
        android:id="@+id/phone_feedback"
        style="@style/common_textview_gray"
        android:layout_marginTop="@dimen/common_dp_24"
        android:text="运营商将会给你发送短信验证码"
        android:visibility="gone" />

    <TextView
        android:id="@+id/phone_button"
        style="@style/common_button_theme_line"
        android:layout_marginTop="@dimen/common_dp_16"
        android:clickable="false"
        android:text="@string/login"
        android:visibility="gone" />
</LinearLayout>
