<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_password_layout"
    style="@style/common_rect_horizontal"
    android:orientation="vertical">

    <LinearLayout
        style="@style/common_rect_horizontal"
        android:layout_marginTop="@dimen/common_dp_16"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/common_textview_black"
            android:layout_marginRight="@dimen/common_dp_20"
            android:text="@string/password"
            android:visibility="gone" />

        <LinearLayout
            style="@style/common_rect_horizontal"
            android:background="@drawable/common_round_rect_line_gray_light"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/common_dp_4"
            android:paddingTop="@dimen/common_dp_4">

            <cn.nodemedia.library.widget.DrawableEditText
                android:id="@+id/password"
                style="@style/common_edit_password"
                android:hint="@string/password_hint" />

            <ImageView
                android:id="@+id/password_eye"
                style="@style/common_imageview"
                android:layout_marginRight="@dimen/common_dp_4"
                android:src="@drawable/icon_eye_hide" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_new_layout"
        style="@style/common_rect_horizontal"
        android:layout_marginTop="@dimen/common_dp_16"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            style="@style/common_textview_black"
            android:layout_marginRight="@dimen/common_dp_20"
            android:text="@string/password_new"
            android:visibility="gone" />

        <LinearLayout
            style="@style/common_rect_horizontal"
            android:background="@drawable/common_round_rect_line_gray_light"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/common_dp_4"
            android:paddingTop="@dimen/common_dp_4">

            <cn.nodemedia.library.widget.DrawableEditText
                android:id="@+id/password_new"
                style="@style/common_edit_password"
                android:hint="@string/password_new_hint" />

            <ImageView
                android:id="@+id/password_new_eye"
                style="@style/common_imageview"
                android:layout_marginRight="@dimen/common_dp_4"
                android:src="@drawable/icon_eye_hide" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/common_rect_horizontal"
        android:layout_marginTop="@dimen/common_dp_16"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/common_textview_black"
            android:layout_marginRight="@dimen/common_dp_20"
            android:text="@string/password_confirm"
            android:visibility="gone" />

        <LinearLayout
            style="@style/common_rect_horizontal"
            android:background="@drawable/common_round_rect_line_gray_light"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/common_dp_4"
            android:paddingTop="@dimen/common_dp_4">

            <cn.nodemedia.library.widget.DrawableEditText
                android:id="@+id/password_confirm"
                style="@style/common_edit_password"
                android:hint="@string/password_confirm_hint" />

            <ImageView
                android:id="@+id/password_confirm_eye"
                style="@style/common_imageview"
                android:layout_marginRight="@dimen/common_dp_4"
                android:src="@drawable/icon_eye_hide" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/password_feedback"
        style="@style/common_textview_gray"
        android:layout_marginTop="@dimen/common_dp_24"
        android:visibility="gone" />

    <TextView
        android:id="@+id/password_button"
        style="@style/common_button_theme_line"
        android:layout_marginTop="@dimen/common_dp_16"
        android:clickable="false"
        android:text="@string/login"
        android:visibility="gone" />
</LinearLayout>