<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/common_rect_match">

    <ImageView
        android:id="@+id/launcher"
        style="@style/common_rect_match"
        android:scaleType="fitXY"
        android:src="@drawable/launcher" />

    <LinearLayout
        android:id="@+id/login_way"
        style="@style/common_rect_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_36"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/login_way_tourist"
            style="@style/common_button_white_line"
            android:layout_width="@dimen/dp_180"
            android:text="@string/login_tourist" />

        <TextView
            style="@style/common_textview_white_big"
            android:layout_margin="@dimen/dp_8"
            android:text="or" />

        <LinearLayout style="@style/common_rect_wrap">

            <ImageView
                android:id="@+id/login_way_qq"
                style="@style/common_imageview"
                android:layout_marginRight="@dimen/dp_24"
                android:src="@drawable/icon_def_qq" />

            <ImageView
                android:id="@+id/login_way_wx"
                style="@style/common_imageview"
                android:layout_marginRight="@dimen/dp_24"
                android:src="@drawable/icon_def_wx" />

            <ImageView
                android:id="@+id/login_way_xl"
                style="@style/common_imageview"
                android:layout_marginRight="@dimen/dp_24"
                android:src="@drawable/icon_def_xl" />

            <ImageView
                android:id="@+id/login_way_phone"
                style="@style/common_imageview"
                android:src="@drawable/icon_def_phone" />
        </LinearLayout>

        <LinearLayout
            style="@style/common_rect_wrap"
            android:layout_marginTop="@dimen/dp_24">

            <TextView
                style="@style/common_textview_white_small"
                android:text="@string/app_protocol" />

            <TextView
                android:id="@+id/login_way_protocol"
                style="@style/common_textview_gray_small"
                android:layout_marginLeft="@dimen/dp_4"
                android:text="@string/app_protocol_name" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
